# DjangoX-Tutorial

./: README.md  pyproject.toml
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0002_customuser_phonenumber.py
config/: settings.py  urls.py
snacks/: admin.py  models.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_rename_name_snack_title.py
templates/snacks/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
